# Pipeline-Log-Management

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  transformation.py
app/: main.py  pyproject.toml
app/utility/logger_loguru/: logger_config.py
app/utility/logger_sentry/: logger_config.py
app/utility/logger_standard/: logger_decorator.py
log_loguru/: logger_decorator.py
log_standard/: logger_config.py
logging_loguro/: main.py  operations.py
logging_standard/: logger_config.py  main.py  operations.py
logs/: logging_standard.txt
pipeline/: main.py
service/: transformation.py
